fixed broken layout from skip link

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -37,17 +37,18 @@ a:hover
   a:visited
     :color #595959
 
-#skiplink a
-  :color #F7F7F7
-  
-#skiplink a:hover, #skiplink a:focus, #skiplink a:active
-  :color blue
-  :float left
-  :display block
-  :width 30%
-  :height auto
-  :text-indent 1em
-  :text-decoration underline
+#headerlinks
+  :float right
+
+#skiplink
+  :float right
+  a
+    :color #F7F7F7
+  a:hover,  a:focus, a:active
+    :color blue
+    :float left
+    :text-indent 1em
+    :text-decoration underline
 
 .main-wrap
   :background #fff url(/images/backgrounds/bg_left.gif) repeat-y
